<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b2b"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/rl_startMenu"
    tools:context=".activity.StartMenuActivity">

    <TextView
        android:textColor="#d6d6d6"
        android:text="@string/application_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:textSize="15pt"
        android:textStyle="italic"
        android:id="@+id/titleTextView1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name3"
        android:id="@+id/titleTextView2"
        android:layout_alignBottom="@+id/titleTextView1"
        android:layout_toRightOf="@+id/b_multiplayer"
        android:layout_toEndOf="@+id/b_multiplayer"
        android:textSize="20pt"
        android:textStyle="bold"
        android:textColor="#ba0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_name1"
        android:id="@+id/titleTextView3"
        android:layout_alignBottom="@+id/titleTextView1"
        android:layout_toLeftOf="@+id/b_multiplayer"
        android:layout_toStartOf="@+id/b_multiplayer"
        android:textSize="20pt"
        android:textStyle="bold"
        android:textColor="#00ba27" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/b_play"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/titleTextView1"
        android:layout_toLeftOf="@+id/b_multiplayer"
        android:layout_toStartOf="@+id/b_multiplayer"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:textColor="#f2f2f2"
        android:background="#0ba600" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multijoueur"
        android:id="@+id/b_multiplayer"
        android:layout_alignTop="@+id/b_play"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:id="@+id/b_credits"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_alignTop="@+id/b_multiplayer"
        android:layout_toRightOf="@+id/b_multiplayer"
        android:layout_toEndOf="@+id/b_multiplayer" />

</RelativeLayout>
