<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2b2b2b"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.GameActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_heart3"
            android:src="@drawable/heart"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/iv_heart2"
        android:layout_toStartOf="@+id/iv_heart2"
        android:layout_marginRight="10px"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_heart2"
        android:src="@drawable/heart"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/iv_heart1"
        android:layout_toStartOf="@+id/iv_heart1"
        android:layout_marginRight="10px"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iv_heart1"
        android:src="@drawable/heart"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/tv_question"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textAlignment="center"
        android:textColor="#f2f2f2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vrai"
        android:id="@+id/b_true"
        android:layout_marginBottom="126dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/b_next"
        android:layout_toStartOf="@+id/b_next"
        android:textColor="#f2f2f2"
        android:background="#0ba600" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faux"
        android:id="@+id/b_false"
        android:layout_alignTop="@+id/b_true"
        android:layout_toRightOf="@+id/b_next"
        android:layout_toEndOf="@+id/b_next"
        android:textColor="#f2f2f2"
        android:background="#ba0000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tv_result"
        android:layout_below="@+id/b_false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:textAlignment="center"
        android:textColor="#f2f2f2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question"
        android:id="@+id/b_next"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/b_score"
        android:layout_below="@+id/tv_result"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</RelativeLayout>
